--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 <a role="button" href="http://beerstrot.it/chi-siamo/"><img src="http://beerstrot.it/asset/img/medium/bancone-e-sedie-dettaglio.jpg" alt="Bancone Ca' Vecchia Beerstrot" class="extra-space-image-tab-home"></a>
             </div>
             <div class="medium-6 medium-pull-6 large-6 large-pull-6 columns">
-                <p>Amiamo la birra artigianale e il buon cibo</p>
+                <p>Amiamo la birra artigianale e il buon cibo.</p>
                 <p>Dal 2005 serviamo piadine ai newyorkesi in due locali in Midtown Manhattan. Ora facciamo il viaggio a ritroso per servire ottima birra artigianale e ottimi hamburger agli Italiani e a tutti coloro che verranno a visitarci.</p>
                 <p>Cosa dicono gli altri di noi: recensioni e commenti.</p>
                 <a role="button" href="http://beerstrot.it/chi-siamo/">Scopri Chi Siamo &rarr;</a>
