fix inline list margin

--- a/chi-siamo/team/andrea-tagliazucchi.html
+++ b/chi-siamo/team/andrea-tagliazucchi.html
@@ -74,7 +74,7 @@
         <div class="row">
             <div class="large-6 medium-6 columns">
                 <h4 class="subheader">Fai parte della community</h4>
-                <ul class="inline-list">
+                <ul class="inline-list no-margin-inline-list">
                     <li>
                         <a href="https://www.facebook.com/cavecchiabeerstrot" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 72 72" style="width: 32px; height: 32px;" enable-background="new 0 0 32 32"><g><path class="fi-social" fill="#3b5998" d="M68 0H4C1.8 0 0 1.8 0 4v64c0 2.2 1.8 4 4 4h34.5V44.1h-9.4V33.3h9.4v-8c0-9.3 5.7-14.4 14-14.4 4 0 7.4.3 8.4.4V21h-5.8c-4.5 0-5.4 2.1-5.4 5.3v6.9h10.8L59 44.1h-9.4V72H68c2.2 0 4-1.8 4-4V4c0-2.2-1.8-4-4-4z"/></g></svg></a>
                     <li>
@@ -183,7 +183,7 @@
 <!-- inizio navbar footer -->
     <div class="row">
         <div class="small-12 medium-12 large-12 columns">
-            <ul class="inline-list navbar-footer-font">
+            <ul class="inline-list no-margin-inline-list navbar-footer-font">
                 <li><a href="http://beerstrot.it">Home</a></li>
                 <li><a href="http://beerstrot.it/menu/">Menu</a></li>
                 <li><a href="http://beerstrot.it/eventi/">Eventi</a></li>
