--- a/chi-siamo/index.html
+++ b/chi-siamo/index.html
@@ -198,6 +198,12 @@
                 </div>
                 <article class="row">
                     <div class="medium-12 large-12 columns">
+                        <h4><em>Postato su facebook</em></h4>
+                        <h6 class="by-line">Scritto il 14 Maggio 2015</h6>  
+                        <blockquote cite="">Grazie ragazzi per la bella serata, cibo e birra ottimi......torneremo<cite>Benedetta Rogati</cite></blockquote>
+                        <a href="https://www.facebook.com/cavecchiabeerstrot/posts/437609579732567">Leggi l'originale</a>
+                    </div>
+                    <div class="medium-12 large-12 columns extra-space">
                         <h4><em>Ottima cucina americana</em></h4>
                         <h6 class="by-line">Scritto il 10 Maggio 2015</h6>  
                         <blockquote cite="">Siamo arrivati al ca' vecchia beerstroat su consiglio di amici. Il casolare è stato ristrutturato osando coi colori... Blu elettrico nella sala principale... Insolito per un posto così. Gli hamburger sono molto buoni e cotti alla perfezione.... Le patatine che erano accompagnate al piatto erano un po' troppo salate. Le costine in salsa BBQ sono come burro. La birra è solo artigianale... Quindi non troverete la classica pils alla spina. I lavori all'esterno non sono ancora terminati, ma in estate quando tutto sarà completato verrà fuori sicuramente una bella location. Torneremo tra qualche mese.<cite>Lorenzo P</cite></blockquote>
