--- a/chi-siamo/index.html
+++ b/chi-siamo/index.html
@@ -197,7 +197,13 @@
                     <a class="close-reveal-modal">&#215;</a>
                 </div>
                 <article class="row">
-                    <div class="medium-12 large-12 columns">
+                    <div class="medium-12 large-12 columns extra-space">
+                        <h4><em>Cena molto piacevole</em></h4>
+                        <h6 class="by-line">Scritto il 14 Maggio 2015</h6>  
+                        <blockquote cite="">Ottima cena in compagni di amici, il luogo è semplicemente meraviglioso.<br>Il menù è ridotto ma molto curato accompagnato da birre artigianali di ottima qualità per tutti i gusti e con prezzi contenuti. Il personale competente e disponibile, ottimo inizio per una nuova gestione. Aspettiamo con ansia le calde serate estive per poter gustare le vostre prelibatezze all'aperto. <br>Consigliato!!!<cite>SuperBetta75</cite></blockquote>
+                        <a href="http://www.tripadvisor.com/ShowUserReviews-g1587889-d2373449-r271897862-Ca_Vecchia_Beerstrot-Filottrano_Province_of_Ancona_Marche.html#REVIEWS">Leggi l'originale</a>
+                    </div>
+                    <div class="medium-12 large-12 columns extra-space">
                         <h4><em>Postato su facebook</em></h4>
                         <h6 class="by-line">Scritto il 14 Maggio 2015</h6>  
                         <blockquote cite="">Grazie ragazzi per la bella serata, cibo e birra ottimi......torneremo<cite>Benedetta Rogati</cite></blockquote>
@@ -283,7 +289,7 @@
                     </form>               
                 </div>
                 <article class="row">  
-                    <div class="medium-12 large-12 columns">
+                    <div class="medium-12 large-12 columns extra-space">
                         <h4><em>Ti stiamo aspettando!</em></h4>
                         <h6 class="by-line">Scritto il 25 Aprile 2015</h6>  
                         <blockquote cite="">Abbiamo appena aperto, è normale non ci siano recensioni. Vuoi essere il primo?<cite>Andrea</cite></blockquote>
