--- a/chi-siamo/index.html
+++ b/chi-siamo/index.html
@@ -197,37 +197,37 @@
                     <a class="close-reveal-modal">&#215;</a>
                 </div>
                 <article class="row">
-                    <div class="medium-12 large-12 columns extra-space">
+                    <div class="medium-12 large-12 columns extra-space-recensione">
                         <h4><em>Cena molto piacevole</em></h4>
                         <h6 class="by-line-chi-siamo">Scritto il 14 Maggio 2015</h6>  
                         <blockquote cite="">Ottima cena in compagni di amici, il luogo è semplicemente meraviglioso.<br>Il menù è ridotto ma molto curato accompagnato da birre artigianali di ottima qualità per tutti i gusti e con prezzi contenuti. Il personale competente e disponibile, ottimo inizio per una nuova gestione. Aspettiamo con ansia le calde serate estive per poter gustare le vostre prelibatezze all'aperto.<br>Consigliato!!!<cite>SuperBetta75</cite></blockquote>
                         <a href="http://www.tripadvisor.com/ShowUserReviews-g1587889-d2373449-r271897862-Ca_Vecchia_Beerstrot-Filottrano_Province_of_Ancona_Marche.html#REVIEWS">Leggi l'originale</a>
                     </div>
-                    <div class="medium-12 large-12 columns extra-space">
+                    <div class="medium-12 large-12 columns extra-space-recensione">
                         <h4><em>Postato su facebook</em></h4>
                         <h6 class="by-line-chi-siamo">Scritto il 14 Maggio 2015</h6>  
                         <blockquote cite="">Grazie ragazzi per la bella serata, cibo e birra ottimi......torneremo<cite>Benedetta Rogati</cite></blockquote>
                         <a href="https://www.facebook.com/cavecchiabeerstrot/posts/437609579732567">Leggi l'originale</a>
                     </div>
-                    <div class="medium-12 large-12 columns extra-space">
+                    <div class="medium-12 large-12 columns extra-space-recensione">
                         <h4><em>Ottima cucina americana</em></h4>
                         <h6 class="by-line-chi-siamo">Scritto il 10 Maggio 2015</h6>  
                         <blockquote cite="">Siamo arrivati al ca' vecchia beerstroat su consiglio di amici. Il casolare è stato ristrutturato osando coi colori... Blu elettrico nella sala principale... Insolito per un posto così. Gli hamburger sono molto buoni e cotti alla perfezione.... Le patatine che erano accompagnate al piatto erano un po' troppo salate. Le costine in salsa BBQ sono come burro. La birra è solo artigianale... Quindi non troverete la classica pils alla spina. I lavori all'esterno non sono ancora terminati, ma in estate quando tutto sarà completato verrà fuori sicuramente una bella location. Torneremo tra qualche mese.<cite>Lorenzo P</cite></blockquote>
                         <a href="http://www.tripadvisor.com/ShowUserReviews-g1587889-d2373449-r271058049-Ca_Vecchia_Beerstrot-Filottrano_Province_of_Ancona_Marche.html#REVIEWS">Leggi l'originale</a>
                     </div>
-                    <div class="medium-12 large-12 columns extra-space">
+                    <div class="medium-12 large-12 columns extra-space-recensione">
                         <h4><em>Ottima cucina americana!</em></h4>
                         <h6 class="by-line-chi-siamo">Scritto il 7 Maggio 2015</h6>  
                         <blockquote cite="">Locale situato in una posizione incantevole dalla quale si gode di un panorama mozzafiato. Ottimo l'hamburgher Diablo accompagnato da una delle tante birre artigianali americane. Da segnalare anche il tiramisù alla birra stout. Porzioni a dir poco abbondanti. Il tutto accompagnato dalla cortesia e gentilezza del personale ed in particolare dei titolari, i quali, grazie alla loro lunga esperienza in America, sanno dare ottimi consigli al cliente.<cite>Paolo G</cite></blockquote>
                         <a href="http://www.tripadvisor.com/ShowUserReviews-g1587889-d2373449-r270557951-Ca_Vecchia_Beerstrot-Filottrano_Province_of_Ancona_Marche.html#REVIEWS">Leggi l'originale</a>
                     </div>
-                    <div class="medium-12 large-12 columns extra-space">
+                    <div class="medium-12 large-12 columns extra-space-recensione">
                         <h4><em>Meraviglia e Novità allo stato puro</em></h4>
                         <h6 class="by-line-chi-siamo">Scritto il 6 Maggio 2015</h6>  
                         <blockquote cite="">Volete la magia di un luogo incantato e ragnato dalla pace ma con la goliardia di persone capaci di unire birre artigianali a cibi completamente estrosi, ottimi e sopratutto con sentore newyorchese. ..beh andateci....provare x credere....e magari ne assaggerete delle belle.<cite>Micaela T</cite></blockquote>
                         <a href="http://www.tripadvisor.com/ShowUserReviews-g1587889-d2373449-r270385623-Ca_Vecchia_Beerstrot-Filottrano_Province_of_Ancona_Marche.html#REVIEWS">Leggi l'originale</a>
                     </div> 
-                    <div class="medium-12 large-12 columns extra-space">
+                    <div class="medium-12 large-12 columns extra-space-recensione">
                         <h4><em>Paesaggio e leccornie</em></h4>
                         <h6 class="by-line-chi-siamo">Scritto il 3 Maggio 2015</h6>  
                         <blockquote cite="">La vista più bella delle Marche, prendi il sole di giorno, ammiri il cielo stellato di notte. Una villa sulla collina meravigliosa e, a sorpresa, nessuna pietanza pretenziosa o personale ingessato, ma ragazzi alla mano e i migliori hamburger ali di pollo costine cheesecake e birre artigianali. Ingredienti di grande qualità e inventiva del cuoco.<cite>rmniccolo</cite></blockquote>
@@ -289,7 +289,7 @@
                     </form>               
                 </div>
                 <article class="row">  
-                    <div class="medium-12 large-12 columns extra-space">
+                    <div class="medium-12 large-12 columns extra-space-recensione">
                         <h4><em>Ti stiamo aspettando!</em></h4>
                         <h6 class="by-line-chi-siamo">Scritto il 25 Aprile 2015</h6>  
                         <blockquote cite="">Abbiamo appena aperto, è normale non ci siano recensioni da parte di blogger e giornalisti. Vuoi essere il primo?<cite>Andrea</cite></blockquote>
