--- a/chi-siamo/index.html
+++ b/chi-siamo/index.html
@@ -200,7 +200,7 @@
                     <div class="medium-12 large-12 columns extra-space-recensione">
                         <h4><em>Cena molto piacevole</em></h4>
                         <h6 class="by-line-chi-siamo">Scritto il 14 Maggio 2015</h6>  
-                        <blockquote cite="">Ottima cena in compagni di amici, il luogo è semplicemente meraviglioso.<br>Il menù è ridotto ma molto curato accompagnato da birre artigianali di ottima qualità per tutti i gusti e con prezzi contenuti. Il personale competente e disponibile, ottimo inizio per una nuova gestione. Aspettiamo con ansia le calde serate estive per poter gustare le vostre prelibatezze all'aperto.<br>Consigliato!!!<cite>SuperBetta75</cite></blockquote>
+                        <blockquote cite="">Ottima cena in compagnia di amici, il luogo è semplicemente meraviglioso.<br>Il menù è ridotto ma molto curato accompagnato da birre artigianali di ottima qualità per tutti i gusti e con prezzi contenuti. Il personale competente e disponibile, ottimo inizio per una nuova gestione. Aspettiamo con ansia le calde serate estive per poter gustare le vostre prelibatezze all'aperto.<br>Consigliato!!!<cite>SuperBetta75</cite></blockquote>
                         <a href="http://www.tripadvisor.com/ShowUserReviews-g1587889-d2373449-r271897862-Ca_Vecchia_Beerstrot-Filottrano_Province_of_Ancona_Marche.html#REVIEWS">Leggi l'originale</a>
                     </div>
                     <div class="medium-12 large-12 columns extra-space-recensione">
