--- a/chi-siamo/index.html
+++ b/chi-siamo/index.html
@@ -198,6 +198,12 @@
                 </div>
                 <article class="row">
                     <div class="medium-12 large-12 columns extra-space-recensione">
+                        <h4><em>Postato su facebook</em></h4>
+                        <h6 class="by-line-chi-siamo">Scritto il 15 Maggio 2015</h6>  
+                        <blockquote cite="">Ottimo cibo in una cornice rilassante. Bravi ragazzi. Mi è piaciuto tutto, hamburger deliziosi e una cheesecake da urlo! Il locale è accogliente e i gestori cordiali e disponibili. Birre sopraffine. Da provare e riprovare.<cite>Elena Fantini</cite></blockquote>
+                        <a href="https://www.facebook.com/cavecchiabeerstrot/reviews">Leggi l'originale</a>
+                    </div>
+                    <div class="medium-12 large-12 columns extra-space-recensione">
                         <h4><em>Cena molto piacevole</em></h4>
                         <h6 class="by-line-chi-siamo">Scritto il 14 Maggio 2015</h6>  
                         <blockquote cite="">Ottima cena in compagnia di amici, il luogo è semplicemente meraviglioso.<br>Il menù è ridotto ma molto curato accompagnato da birre artigianali di ottima qualità per tutti i gusti e con prezzi contenuti. Il personale competente e disponibile, ottimo inizio per una nuova gestione. Aspettiamo con ansia le calde serate estive per poter gustare le vostre prelibatezze all'aperto.<br>Consigliato!!!<cite>SuperBetta75</cite></blockquote>
