--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="copyright" content="Beerstrot Copyright (c) 2015"/>
     <meta name="p:domain_verify" content="ca68ebe696c4699798a5a243ca187b2d"/>
     <link rel="canonical" href="http://beerstrot.it"/>
-    <link rel="stylesheet" href="http://beerstrot.it/css/app.css"/>
+    <link rel="stylesheet" href="css/app.css"/>
     <link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 </head>
@@ -258,16 +258,16 @@
     </footer>
 <!-- fine footer -->
 <!-- inizio navbar footer -->
-    <div class="row">
+    <div class="row footer">
         <div class="small-12 medium-12 large-12 columns">
-            <ul class="inline-list no-margin-inline-list navbar-footer-font">
-                <li><a href="http://beerstrot.it">Home</a></li>
-                <li><a href="http://beerstrot.it/menu/">Menu</a></li>
-                <li><a href="http://beerstrot.it/eventi/">Eventi</a></li>
-                <li><a href="http://beerstrot.it/chi-siamo/">Chi Siamo</a></li>
-                <li><a href="http://beerstrot.it/contatti/">Contatti</a></li>
-                <li><a href="http://beerstrot.it/blog/">Blog</a></li>
-            </ul>
+            <p class="links">
+                <a href="http://beerstrot.it">Home</a>
+                <a href="http://beerstrot.it/menu/">Menu</a>
+                <a href="http://beerstrot.it/eventi/">Eventi</a>
+                <a href="http://beerstrot.it/chi-siamo/">Chi Siamo</a>
+                <a href="http://beerstrot.it/contatti/">Contatti</a>
+                <a href="http://beerstrot.it/blog/">Blog</a>
+            </p>
         </div>
     </div>
 <!-- fine navbar footer-->
