--- a/chi-siamo/index.html
+++ b/chi-siamo/index.html
@@ -131,6 +131,11 @@
                         </a>
                     </li>
                     <li>
+                        <a href="http://beerstrot.it/asset/img/large/alberi-beerstrot.jpg" class="th">
+                            <img data-caption="Aia e panorama"  src="http://beerstrot.it/asset/img/thumbs/alberi-beerstrot-th.jpg" alt="Aia e Panorama">
+                        </a>
+                    </li>
+                    <li>
                         <a href="http://beerstrot.it/asset/img/large/tavolo-dettaglio-beerstrot.jpg" class="th">
                             <img data-caption="Un locale bellisssimo" src="http://beerstrot.it/asset/img/thumbs/tavolo-dettaglio-beerstrot-th.jpg" alt="Tavolo Dettaglio">
                         </a>
