--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <li class="divider"></li>
                 <li><a href="http://beerstrot.it/eventi/">Eventi</a></li>
                 <li class="divider"></li>
-                <li><a href="http://beerstrot.it/chi-siamo/">Chi Siamo</a></li>
+                <li><a href="http://beerstrot.it/chi-siamo/">Chi&nbsp;Siamo</a></li>
                 <li class="divider"></li>
                 <li><a href="http://beerstrot.it/contatti/">Contatti</a></li>
                 <li class="divider"></li>
@@ -99,7 +99,7 @@
     <div class="panel-home-n">
         <div class="row">
             <div class="medium-12 large-12 columns">
-                <h1>Chi siamo</h1>
+                <h1>Chi&nbsp;Siamo</h1>
             </div>
         </div>
         <div class="row">
@@ -110,7 +110,7 @@
                 <p>Amiamo la birra artigianale e il buon cibo.</p>
                 <p>Dal 2005 serviamo piadine ai newyorkesi in due locali in Midtown Manhattan. Ora facciamo il viaggio a ritroso per servire ottima birra artigianale e ottimi hamburger agli Italiani e a tutti coloro che verranno a visitarci.</p>
                 <p>Cosa dicono gli altri di noi: recensioni e commenti.</p>
-                <a role="button" href="http://beerstrot.it/chi-siamo/">Scopri Chi Siamo &rarr;</a>
+                <a role="button" href="http://beerstrot.it/chi-siamo/">Scopri Chi&nbsp;Siamo &rarr;</a>
             </div>
         </div>
     </div>
@@ -264,7 +264,7 @@
                 <a href="http://beerstrot.it">Home</a>
                 <a href="http://beerstrot.it/menu/">Menu</a>
                 <a href="http://beerstrot.it/eventi/">Eventi</a>
-                <a href="http://beerstrot.it/chi-siamo/">Chi Siamo</a>
+                <a href="http://beerstrot.it/chi-siamo/">Chi&nbsp;Siamo</a>
                 <a href="http://beerstrot.it/contatti/">Contatti</a>
                 <a href="http://beerstrot.it/blog/">Blog</a>
             </p>
