--- a/chi-siamo/team/giulia-mazza.html
+++ b/chi-siamo/team/giulia-mazza.html
@@ -31,7 +31,7 @@
                 <li class="divider"></li>
                 <li><a href="http://beerstrot.it/eventi/">Eventi</a></li>
                 <li class="divider"></li>
-                <li><a href="http://beerstrot.it/chi-siamo/">Chi Siamo</a></li>
+                <li><a href="http://beerstrot.it/chi-siamo/">Chi&nbsp;Siamo</a></li>
                 <li class="divider"></li>
                 <li><a href="http://beerstrot.it/contatti/">Contatti</a></li>
                 <li class="divider"></li>
@@ -187,7 +187,7 @@
                 <a href="http://beerstrot.it">Home</a>
                 <a href="http://beerstrot.it/menu/">Menu</a>
                 <a href="http://beerstrot.it/eventi/">Eventi</a>
-                <a href="http://beerstrot.it/chi-siamo/">Chi Siamo</a>
+                <a href="http://beerstrot.it/chi-siamo/">Chi&nbsp;Siamo</a>
                 <a href="http://beerstrot.it/contatti/">Contatti</a>
                 <a href="http://beerstrot.it/blog/">Blog</a>
             </p>
