add images to chi siamo

--- a/chi-siamo/index.html
+++ b/chi-siamo/index.html
@@ -165,6 +165,16 @@
                             <img data-caption="Un panorma mozzafiato" src="http://beerstrot.it/asset/img/thumbs/panorama-da-porta-finestra-th.jpg" alt="Panorama da Porta Finestra">
                         </a>
                     </li>
+                    <li>
+                        <a href="http://beerstrot.it/asset/img/large/birra-bici-hamburger.jpg" class="th">
+                            <img data-caption="Birra, bici e hamburger" src="http://beerstrot.it/asset/img/thumbs/birra-bici-hamburger-th.jpg" alt="Birra, Bici e Hamburger">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="http://beerstrot.it/asset/img/large/luca-giovanni.jpg" class="th">
+                            <img data-caption="Birra e bici" src="http://beerstrot.it/asset/img/thumbs/uca-giovanni-th.jpg" alt="Birra e Bici">
+                        </a>
+                    </li>
                 </ul> 
             </div>
             <div class="medium-6 large-6 columns">
