--- a/chi-siamo/index.html
+++ b/chi-siamo/index.html
@@ -213,6 +213,12 @@
                 </div>
                 <article class="row">
                     <div class="medium-12 large-12 columns extra-space-recensione">
+                        <h4><em>Meglio che a Portland!</em></h4>
+                        <h6 class="by-line-chi-siamo">Scritto il 19 Maggio 2015</h6>  
+                        <blockquote cite="">a spasso con la bici in viaggio per le colline Marchigiane mi son imbattuto in questo splendido casolare. volevo solo fare alcune foto, poi mi son accorto che era una birreria.. deciso a placare la sete che sl queste colline sanno mettere sono stato accolto da Andrea e Giovanni ancor in orario di chiusura.. mi hanno dissetato.. raccontato la loro storia.. e sopratutto nutrito.. che dire, han portato un must Americano qui a Filottrano Hamburger fantastici... (mi han anche fatto sbirciare in cucina.. così posso garantire sulla preparazione). Hamburger eccellente.. carne che sa di carne.. il pane si sente che era appena fatto.. (badate bene.. voi che mi leggete.. il menù non si ferma solo a quello.. essendo un vero Hamburger.. ero sazio.. ma troverete anche stuzzichini di estrazione local.. costine BBQ ed alette di pollo). cosa dire delle birre... ne ho assaggiate alcune.. si son impegnati bene nella scelta delle artigianali.. hanno solo quelle sia alla spina che in bottiglia. ce ne sono davvero tante.. anche molto particolari.. si vede che Andrea ha una predilezione per le IPA decisamente cariche, ma ti sa consigliare anche la più delicata. <br>difficile trovare un mix così azzeccato.<cite>Mrluka</cite></blockquote>
+                        <a href="http://www.tripadvisor.com/Restaurant_Review-g1587889-d2373449-Reviews-Ca_Vecchia_Beerstrot-Filottrano_Province_of_Ancona_Marche.html">Leggi l'originale</a>
+                    </div>
+                    <div class="medium-12 large-12 columns extra-space-recensione">
                         <h4><em>Postato su facebook</em></h4>
                         <h6 class="by-line-chi-siamo">Scritto il 15 Maggio 2015</h6>  
                         <blockquote cite="">Ottimo cibo in una cornice rilassante. Bravi ragazzi. Mi è piaciuto tutto, hamburger deliziosi e una cheesecake da urlo! Il locale è accogliente e i gestori cordiali e disponibili. Birre sopraffine. Da provare e riprovare.<cite>Elena Fantini</cite></blockquote>
