--- a/chi-siamo/index.html
+++ b/chi-siamo/index.html
@@ -175,6 +175,16 @@
                             <img data-caption="Birra e bici" src="http://beerstrot.it/asset/img/thumbs/luca-giovanni-th.jpg" alt="Birra e Bici">
                         </a>
                     </li>
+                    <li>
+                        <a href="http://beerstrot.it/asset/img/large/hamburger.jpg" class="th">
+                            <img data-caption="Hamburger" src="http://beerstrot.it/asset/img/thumbs/hamburger-th.jpg" alt="Hamburger">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="http://beerstrot.it/asset/img/large/eating-burger.jpg" class="th">
+                            <img data-caption="Mangiando hamburger..." src="http://beerstrot.it/asset/img/thumbs/eating-burger-th.jpg" alt="Mangiando hamburger">
+                        </a>
+                    </li>
                 </ul> 
             </div>
             <div class="medium-6 large-6 columns">
