--- a/chi-siamo/index.html
+++ b/chi-siamo/index.html
@@ -182,7 +182,7 @@
                     </li>
                     <li>
                         <a href="http://beerstrot.it/asset/img/large/eating-burger.jpg" class="th">
-                            <img data-caption="Mangiando hamburger..." src="http://beerstrot.it/asset/img/thumbs/eating-burger-th.jpg" alt="Mangiando hamburger">
+                            <img data-caption="Mangiando hamburger, alette e costine..." src="http://beerstrot.it/asset/img/thumbs/eating-burger-th.jpg" alt="Hamburger, Alette, Costine">
                         </a>
                     </li>
                 </ul> 
