--- a/chi-siamo/index.html
+++ b/chi-siamo/index.html
@@ -185,6 +185,11 @@
                             <img data-caption="Mangiando hamburger, alette e costine..." src="http://beerstrot.it/asset/img/thumbs/eating-burger-th.jpg" alt="Hamburger, Alette, Costine">
                         </a>
                     </li>
+                    <li>
+                        <a href="http://beerstrot.it/asset/img/large/birra-rovesciata.jpg" class="th">
+                            <img data-caption="Birra rovesciata" src="http://beerstrot.it/asset/img/thumbs/birra-rovesciata-th.jpg" alt="Birra Rovesciata">
+                        </a>
+                    </li>
                 </ul> 
             </div>
             <div class="medium-6 large-6 columns">
