--- a/chi-siamo/index.html
+++ b/chi-siamo/index.html
@@ -190,6 +190,16 @@
                             <img data-caption="Birra rovesciata" src="http://beerstrot.it/asset/img/thumbs/birra-rovesciata-th.jpg" alt="Birra Rovesciata">
                         </a>
                     </li>
+                    <li>
+                        <a href="http://beerstrot.it/asset/img/large/scala-e-birre.jpg.jpg" class="th">
+                            <img data-caption="Scala per il paradiso" src="http://beerstrot.it/asset/img/thumbs/scala-e-birre.jpg-th.jpg" alt="Scala e Birre Artigianali">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="http://beerstrot.it/asset/img/large/cartello-e-birre.jpg" class="th">
+                            <img data-caption="Una birra artigianale, please..." src="http://beerstrot.it/asset/img/thumbs/cartello-e-birre-th.jpg" alt="Cartellone e Birre">
+                        </a>
+                    </li>
                 </ul> 
             </div>
             <div class="medium-6 large-6 columns">
