--- a/chi-siamo/index.html
+++ b/chi-siamo/index.html
@@ -192,7 +192,7 @@
                     </li>
                     <li>
                         <a href="http://beerstrot.it/asset/img/large/scala-e-birre.jpg.jpg" class="th">
-                            <img data-caption="Scala per il paradiso" src="http://beerstrot.it/asset/img/thumbs/scala-e-birre.jpg-th.jpg" alt="Scala e Birre Artigianali">
+                            <img data-caption="Scala per il paradiso" src="http://beerstrot.it/asset/img/thumbs/scala-e-birre-th.jpg" alt="Scala e Birre Artigianali">
                         </a>
                     </li>
                     <li>
