--- a/chi-siamo/index.html
+++ b/chi-siamo/index.html
@@ -191,7 +191,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="http://beerstrot.it/asset/img/large/scala-e-birre.jpg.jpg" class="th">
+                        <a href="http://beerstrot.it/asset/img/large/scala-e-birre.jpg" class="th">
                             <img data-caption="Scala per il paradiso" src="http://beerstrot.it/asset/img/thumbs/scala-e-birre-th.jpg" alt="Scala e Birre Artigianali">
                         </a>
                     </li>
