--- a/menu/index.html
+++ b/menu/index.html
@@ -143,7 +143,7 @@
                         <h2 class="subheader">Hamburger <br><small>Servito con patate fritte e insalata. Pane di nostra produzione.</small></h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/classico.html">New York<span class="right">7,5</span></a></h3>    
+                                <h3><a href="http://beerstrot.it/menu/cibo/new-york.html">New York<span class="right">7,5</span></a></h3>    
                                 <p>180 grammi di manzo, cipolla caramellata, insalata, cheddar</p>
                             </li>
                             <li>
@@ -159,7 +159,7 @@
                                 <p>180 grammi di manzo, melanzane, pomodori, formaggio di capra, rucola</p>
                             </li> -->
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/lamburger.html">Lamb<span class="right">8,75</span></a></h3>    
+                                <h3><a href="http://beerstrot.it/menu/cibo/lamb.html">Lamb<span class="right">8,75</span></a></h3>    
                                 <p>180 grammi di agnello, fondo scuro, germogli di spinaci, salsa allo yogurt</p>
                             </li>
                             <!-- <li>
@@ -167,8 +167,8 @@
                                 <p>180 grammi di salmone, doppia panna, aneto, limone, rucola</p>
                             </li> -->
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/ceci.html">Cecilia<span class="right">7,5</span></a></h3>    
-                                <p>180 grammi di ceci, composta leggermente piccante di verdure e menta, rucola</p>
+                                <h3><a href="http://beerstrot.it/menu/cibo/cecilia.html">Cecilia<span class="right">7,5</span></a></h3>    
+                                <p>180 grammi di ceci, avocado, composta leggermente piccante di verdure e menta, rucola</p>
                             </li>
                         </ul>                      
                     </div>   
