--- a/chi-siamo/index.html
+++ b/chi-siamo/index.html
@@ -84,7 +84,7 @@
                     </li>
                 </ul>
             </div>
-            <div itemscope itemtype="http://schema.org/Restaurant" class="medium-6 medium-pull-6 large-6 large-pull-6 columns">
+            <div class="medium-6 medium-pull-6 large-6 large-pull-6 columns">
                 <p><strong>Amiamo la birra artigianale e il buon cibo</strong></p>
                 <p>Dal 2005 serviamo piadine ai newyorkesi in due locali in Midtown Manhattan.</p> 
                 <p>Ora facciamo il viaggio a ritroso per servire ottima birra artigianale e ottimi hamburger agli Italiani e a tutti coloro che verranno a visitarci.</p>
@@ -221,7 +221,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="medium-6 large-6 columns" itemscope itemtype="http://schema.org/Restaurant">
+            <div class="medium-6 large-6 columns">
                 <h3>Cosa dicono i clienti</h3>
                 <a role="button" href="#" class="button extra-space-button" data-reveal-id="recensione-reveal">Scrivi una recensione
                 </a>
