--- a/menu/index.html
+++ b/menu/index.html
@@ -263,8 +263,8 @@
                                 <p>Birrificio MC77. Ambrata e amarissima</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/birra/ape-regina.html">Birra del mese<span class="right"> 3 | 5,5</span></a></h3>
-                                <p>Ve lo diciamo quando troviamo la Pils che davvero amiamo</p>
+                                <h3><a href="http://beerstrot.it/menu/birra/ape-regina.html">Birra del mese<span class="right"> 4 | 6</span></a></h3>
+                                <p>Questa birra cambia spesso</p>
                             </li>
                         </ul>
                     </div>
