--- a/menu/index.html
+++ b/menu/index.html
@@ -251,7 +251,7 @@
                         <h2 class="subheader">Birre artigianali alla Spina</h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/birra/tropicale.html">Tropical Ale<span class="right"> 4 | 6</span></a></h3>
+                                <h3><a href="http://beerstrot.it/menu/birra/tropicale.html">TropicAle<span class="right"> 4 | 6</span></a></h3>
                                 <p>Birrificio Emiliano. Ambrata e amara</p>
                             </li>
                             <li>
