--- a/chi-siamo/index.html
+++ b/chi-siamo/index.html
@@ -238,58 +238,70 @@
                 </div>
                 <article class="row">
                     <div class="medium-12 large-12 columns extra-space-recensione">
+                        <h4><em>Beerstrot Fantastico... birre al TOP</em></h4>
+                        <h6 class="by-line-chi-siamo">Scritto il 27 Maggio 2015</h6>  
+                        <blockquote cite="">Ottima cena ma non la solita a base di pesce o carne come si mangia in parecchi posti.... qui è veramente uno spettacolo sia a livello di cibo ma anche a livello di come è situato il locale. Fuori c'è una visuale magnifica... si il paesino nel sua bellissima archittura e natura..... poi a livello di cibo niente di che dire dai panini con carni nostrane che carne. la birra.... il piatto forte... provate l'ape regina o la tropical... non vi deluderà<cite>Mr_Cescoo</cite></blockquote>
+                        <a href="http://www.tripadvisor.com/ShowUserReviews-g1587889-d2373449-r275002209-Ca_Vecchia_Beerstrot-Filottrano_Province_of_Ancona_Marche.html#REVIEWS" target="_blank">Leggi l'originale</a>
+                    </div>
+                    <div class="medium-12 large-12 columns extra-space-recensione">
+                        <h4><em>Cibo strepitoso</em></h4>
+                        <h6 class="by-line-chi-siamo">Scritto il 25 Maggio 2015</h6>  
+                        <blockquote cite="">Siamo andati io e mio marito in questo locale meraviglioso. Cibo è marcatamente americano, ma con un tocco italiano. Ho mangioto le costine in salsa bbq, tenerissime e saporitissime. Mio marito ha preso un hamburger, pane fatto in casa e carne freschissima. La selezione di birre artigianali è strepitosa, ma io ho preso il vino della casa: molto buono e a un prezzo ragionevole.<br>Ritornerò appena possibile.<cite>Angelalasarta</cite></blockquote>
+                        <a href="http://www.tripadvisor.com/ShowUserReviews-g1587889-d2373449-r274377099-Ca_Vecchia_Beerstrot-Filottrano_Province_of_Ancona_Marche.html#REVIEWS" target="_blank">Leggi l'originale</a>
+                    </div>
+                    <div class="medium-12 large-12 columns extra-space-recensione">
                         <h4><em>Great Burgers</em></h4>
                         <h6 class="by-line-chi-siamo">Scritto il 21 Maggio 2015</h6>  
                         <blockquote cite="">Back from my trip in Italy. Here I found really great burgers, way better than the ones in San Francisco. Also a great selection of American craft beers. Great<cite>Andrew D.</cite></blockquote>
-                        <a href="http://www.tripadvisor.com/ShowUserReviews-g1587889-d2373449-r273636530-Ca_Vecchia_Beerstrot-Filottrano_Province_of_Ancona_Marche.html#REVIEWS">Leggi l'originale</a>
+                        <a href="http://www.tripadvisor.com/ShowUserReviews-g1587889-d2373449-r273636530-Ca_Vecchia_Beerstrot-Filottrano_Province_of_Ancona_Marche.html#REVIEWS" target="_blank">Leggi l'originale</a>
                     </div>
                     <div class="medium-12 large-12 columns extra-space-recensione">
                         <h4><em>Meglio che a Portland!</em></h4>
                         <h6 class="by-line-chi-siamo">Scritto il 19 Maggio 2015</h6>  
                         <blockquote cite="">a spasso con la bici in viaggio per le colline Marchigiane mi son imbattuto in questo splendido casolare. volevo solo fare alcune foto, poi mi son accorto che era una birreria.. deciso a placare la sete che sl queste colline sanno mettere sono stato accolto da Andrea e Giovanni ancor in orario di chiusura.. mi hanno dissetato.. raccontato la loro storia.. e sopratutto nutrito.. che dire, han portato un must Americano qui a Filottrano Hamburger fantastici... (mi han anche fatto sbirciare in cucina.. così posso garantire sulla preparazione). Hamburger eccellente.. carne che sa di carne.. il pane si sente che era appena fatto.. (badate bene.. voi che mi leggete.. il menù non si ferma solo a quello.. essendo un vero Hamburger.. ero sazio.. ma troverete anche stuzzichini di estrazione local.. costine BBQ ed alette di pollo). cosa dire delle birre... ne ho assaggiate alcune.. si son impegnati bene nella scelta delle artigianali.. hanno solo quelle sia alla spina che in bottiglia. ce ne sono davvero tante.. anche molto particolari.. si vede che Andrea ha una predilezione per le IPA decisamente cariche, ma ti sa consigliare anche la più delicata. <br>difficile trovare un mix così azzeccato.<cite>Mrluka</cite></blockquote>
-                        <a href="http://www.tripadvisor.com/ShowUserReviews-g1587889-d2373449-r272994390-Ca_Vecchia_Beerstrot-Filottrano_Province_of_Ancona_Marche.html#REVIEWS">Leggi l'originale</a>
+                        <a href="http://www.tripadvisor.com/ShowUserReviews-g1587889-d2373449-r272994390-Ca_Vecchia_Beerstrot-Filottrano_Province_of_Ancona_Marche.html#REVIEWS" target="_blank">Leggi l'originale</a>
                     </div>
                     <div class="medium-12 large-12 columns extra-space-recensione">
                         <h4><em>Postato su facebook</em></h4>
                         <h6 class="by-line-chi-siamo">Scritto il 15 Maggio 2015</h6>  
                         <blockquote cite="">Ottimo cibo in una cornice rilassante. Bravi ragazzi. Mi è piaciuto tutto, hamburger deliziosi e una cheesecake da urlo! Il locale è accogliente e i gestori cordiali e disponibili. Birre sopraffine. Da provare e riprovare.<cite>Elena Fantini</cite></blockquote>
-                        <a href="https://www.facebook.com/cavecchiabeerstrot/reviews">Leggi l'originale</a>
+                        <a href="https://www.facebook.com/cavecchiabeerstrot/reviews" target="_blank">Leggi l'originale</a>
                     </div>
                     <div class="medium-12 large-12 columns extra-space-recensione">
                         <h4><em>Cena molto piacevole</em></h4>
                         <h6 class="by-line-chi-siamo">Scritto il 14 Maggio 2015</h6>  
                         <blockquote cite="">Ottima cena in compagnia di amici, il luogo è semplicemente meraviglioso.<br>Il menù è ridotto ma molto curato accompagnato da birre artigianali di ottima qualità per tutti i gusti e con prezzi contenuti. Il personale competente e disponibile, ottimo inizio per una nuova gestione. Aspettiamo con ansia le calde serate estive per poter gustare le vostre prelibatezze all'aperto.<br>Consigliato!!!<cite>SuperBetta75</cite></blockquote>
-                        <a href="http://www.tripadvisor.com/ShowUserReviews-g1587889-d2373449-r271897862-Ca_Vecchia_Beerstrot-Filottrano_Province_of_Ancona_Marche.html#REVIEWS">Leggi l'originale</a>
+                        <a href="http://www.tripadvisor.com/ShowUserReviews-g1587889-d2373449-r271897862-Ca_Vecchia_Beerstrot-Filottrano_Province_of_Ancona_Marche.html#REVIEWS" target="_blank">Leggi l'originale</a>
                     </div>
                     <div class="medium-12 large-12 columns extra-space-recensione">
                         <h4><em>Postato su facebook</em></h4>
                         <h6 class="by-line-chi-siamo">Scritto il 14 Maggio 2015</h6>  
                         <blockquote cite="">Grazie ragazzi per la bella serata, cibo e birra ottimi......torneremo<cite>Benedetta Rogati</cite></blockquote>
-                        <a href="https://www.facebook.com/cavecchiabeerstrot/posts/437609579732567">Leggi l'originale</a>
+                        <a href="https://www.facebook.com/cavecchiabeerstrot/posts/437609579732567" target="_blank">Leggi l'originale</a>
                     </div>
                     <div class="medium-12 large-12 columns extra-space-recensione">
                         <h4><em>Ottima cucina americana</em></h4>
                         <h6 class="by-line-chi-siamo">Scritto il 10 Maggio 2015</h6>  
                         <blockquote cite="">Siamo arrivati al ca' vecchia beerstroat su consiglio di amici. Il casolare è stato ristrutturato osando coi colori... Blu elettrico nella sala principale... Insolito per un posto così. Gli hamburger sono molto buoni e cotti alla perfezione.... Le patatine che erano accompagnate al piatto erano un po' troppo salate. Le costine in salsa BBQ sono come burro. La birra è solo artigianale... Quindi non troverete la classica pils alla spina. I lavori all'esterno non sono ancora terminati, ma in estate quando tutto sarà completato verrà fuori sicuramente una bella location. Torneremo tra qualche mese.<cite>Lorenzo P</cite></blockquote>
-                        <a href="http://www.tripadvisor.com/ShowUserReviews-g1587889-d2373449-r271058049-Ca_Vecchia_Beerstrot-Filottrano_Province_of_Ancona_Marche.html#REVIEWS">Leggi l'originale</a>
+                        <a href="http://www.tripadvisor.com/ShowUserReviews-g1587889-d2373449-r271058049-Ca_Vecchia_Beerstrot-Filottrano_Province_of_Ancona_Marche.html#REVIEWS" target="_blank">Leggi l'originale</a>
                     </div>
                     <div class="medium-12 large-12 columns extra-space-recensione">
                         <h4><em>Ottima cucina americana!</em></h4>
                         <h6 class="by-line-chi-siamo">Scritto il 7 Maggio 2015</h6>  
                         <blockquote cite="">Locale situato in una posizione incantevole dalla quale si gode di un panorama mozzafiato. Ottimo l'hamburgher Diablo accompagnato da una delle tante birre artigianali americane. Da segnalare anche il tiramisù alla birra stout. Porzioni a dir poco abbondanti. Il tutto accompagnato dalla cortesia e gentilezza del personale ed in particolare dei titolari, i quali, grazie alla loro lunga esperienza in America, sanno dare ottimi consigli al cliente.<cite>Paolo G</cite></blockquote>
-                        <a href="http://www.tripadvisor.com/ShowUserReviews-g1587889-d2373449-r270557951-Ca_Vecchia_Beerstrot-Filottrano_Province_of_Ancona_Marche.html#REVIEWS">Leggi l'originale</a>
+                        <a href="http://www.tripadvisor.com/ShowUserReviews-g1587889-d2373449-r270557951-Ca_Vecchia_Beerstrot-Filottrano_Province_of_Ancona_Marche.html#REVIEWS" target="_blank">Leggi l'originale</a>
                     </div>
                     <div class="medium-12 large-12 columns extra-space-recensione">
                         <h4><em>Meraviglia e Novità allo stato puro</em></h4>
                         <h6 class="by-line-chi-siamo">Scritto il 6 Maggio 2015</h6>  
                         <blockquote cite="">Volete la magia di un luogo incantato e ragnato dalla pace ma con la goliardia di persone capaci di unire birre artigianali a cibi completamente estrosi, ottimi e sopratutto con sentore newyorchese. ..beh andateci....provare x credere....e magari ne assaggerete delle belle.<cite>Micaela T</cite></blockquote>
-                        <a href="http://www.tripadvisor.com/ShowUserReviews-g1587889-d2373449-r270385623-Ca_Vecchia_Beerstrot-Filottrano_Province_of_Ancona_Marche.html#REVIEWS">Leggi l'originale</a>
+                        <a href="http://www.tripadvisor.com/ShowUserReviews-g1587889-d2373449-r270385623-Ca_Vecchia_Beerstrot-Filottrano_Province_of_Ancona_Marche.html#REVIEWS" target="_blank">Leggi l'originale</a>
                     </div> 
                     <div class="medium-12 large-12 columns extra-space-recensione">
                         <h4><em>Paesaggio e leccornie</em></h4>
                         <h6 class="by-line-chi-siamo">Scritto il 3 Maggio 2015</h6>  
                         <blockquote cite="">La vista più bella delle Marche, prendi il sole di giorno, ammiri il cielo stellato di notte. Una villa sulla collina meravigliosa e, a sorpresa, nessuna pietanza pretenziosa o personale ingessato, ma ragazzi alla mano e i migliori hamburger ali di pollo costine cheesecake e birre artigianali. Ingredienti di grande qualità e inventiva del cuoco.<cite>rmniccolo</cite></blockquote>
-                        <a href="http://www.tripadvisor.com/ShowUserReviews-g1587889-d2373449-r269624878-Ca_Vecchia_Beerstrot-Filottrano_Province_of_Ancona_Marche.html#REVIEWS">Leggi l'originale</a>
+                        <a href="http://www.tripadvisor.com/ShowUserReviews-g1587889-d2373449-r269624878-Ca_Vecchia_Beerstrot-Filottrano_Province_of_Ancona_Marche.html#REVIEWS" target="_blank">Leggi l'originale</a>
                     </div>
                 </article>
             </div>    
