--- a/menu/index.html
+++ b/menu/index.html
@@ -70,7 +70,7 @@
     <div class="tabs-content" id="menupage-text"> 
 <!-- cibo --> 
         <section class="content active" role="tabpanel" aria-hidden="false" id="cibo">
-            <div class="panel-menu-n">
+            <div class="panel-menu-2n">
                 <div class="row">
                     <div class="large-12 medium-12 small-12 columns">
                         <h2 class="subheader ">Per Stuzzicare</h2>
@@ -80,30 +80,42 @@
                                 <p>Peperoncini piccanti avvolti nella pancetta</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/frittelle-di-capperi.html">Frittelle di capperi<span class="right">3,5</span></a></h3>    
-                                <p>Capperi in fragrante tempura</p>
+                                <h3><a href="http://beerstrot.it/menu/cibo/bocconcini-di-pollo.html">Bocconcini di pollo<span class="right">4,5</span></a></h3>    
+                                <p>Petto di pollo di prima scelta impanato e fritto</p>
                             </li>
-                            <!-- <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/asparagi-e-prosciutto.html">Asparagi e prosciutto<span class="right">4</span></a></h3>    
-                                <p>Asparagi in sfoglia con prosciutto crudo</p>
-                            </li> -->
-                            <!-- <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/fritto-misto.html">Fritto Beerstrot<span class="right">5</span></a></h3>    
-                                <p>Fritto misto di verdure e formaggi</p>
-                            </li> -->
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/salumi.html">Salumi e formaggi<span class="right">9</span></a></h3>    
-                                <p>Prosciutto, Lonza, Ciauscolo, Salame, e formaggi vari</p>
+                                <h3><a href="http://beerstrot.it/menu/cibo/patatine.html">Patate fritte<span class="right">3,5</span></a></h3>    
+                                <p>Patate fritte con la buccia tagliate a mano</p>
                             </li>
-                            <!--   <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/formaggi.html">Formaggi<span class="right">9</span></a></h3>    
-                                <p>Formaggi di vacca e pecora, freschi e stagionati</p>
-                            </li> -->
+                            <li>
+                                <h3><a href="http://beerstrot.it/menu/cibo/patate-al-forno.html">Patate arrosto<span class="right">4</span></a></h3>    
+                                <p>Patate al forno con la buccia, aglio, rosmarino e tagliate a mano</p>
+                            </li>
+                            <li>
+                                <h3><a href="http://beerstrot.it/menu/cibo/salumi.html">Insalata mista<span class="right">4</span></a></h3>
+                                <p>Verdure di stagione</p>
+                            </li>
+                            <li>
+                                <h3><a href="http://beerstrot.it/menu/cibo/salumi.html">Anelli di cipolla<span class="right">3,5</span></a></h3>
+                                <p>Cipolla fritta impanata con farina di riso</p>
+                            </li>
+                            <li>
+                                <h3><a href="http://beerstrot.it/menu/cibo/salumi.html">Bastoncini di zucchine e melanzane<span class="right">4</span></a></h3>
+                                <p>Zucchine e melanzane fritte impanate con farina di riso</p>
+                            </li>
+                            <li>
+                                <h3><a href="http://beerstrot.it/menu/cibo/salumi.html">Verdure grigliate<span class="right">4,5</span></a></h3>
+                                <p>Verdure di stagione grigliate con rosmarino</p>
+                            </li>
+                            <li>
+                                <h3><a href="http://beerstrot.it/menu/cibo/salumi.html">Pizzette e focacce<span class="right">2,5</span></a></h3>
+                                <p>Pizzette e focacce all'olio di oliva fatte in casa</p>
+                            </li>
                         </ul>
                     </div>
                 </div>
             </div>
-            <div class="panel-menu-2n">
+            <!-- <div class="panel-menu-2n">
                 <div class="row">
                     <div class="large-12 medium-12 small-12 columns">
                         <h2 class="subheader">Pasta <br><small>Pasta fresca fatta in casa</small></h2>
@@ -119,8 +131,8 @@
                         </ul>                      
                     </div>
                 </div>
-            </div>
-            <div class="panel-menu-n">
+            </div> -->
+            <!-- <div class="panel-menu-n">
                 <div class="row">
                     <div class="large-12 medium-12 small-12 columns">
                         <h2 class="subheader">Zuppe</h2>
@@ -136,87 +148,58 @@
                         </ul>  
                     </div>
                 </div>
-            </div>
-            <div class="panel-menu-2n">
+            </div> -->
+            <div class="panel-menu-n">
                 <div class="row">
                     <div class="large-12 medium-12 small-12 columns">
                         <h2 class="subheader">Hamburger <br><small>Servito con patate fritte e insalata. Pane di nostra produzione.</small></h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/new-york.html">New York<span class="right">7,5</span></a></h3>    
+                                <h3><a href="http://beerstrot.it/menu/cibo/new-york.html">New York<span class="right">8,5</span></a></h3>    
                                 <p>180 grammi di manzo, cipolla caramellata, insalata, cheddar</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/diablo.html">Diablo<span class="right">8,5</span></a></h3>    
+                                <h3><a href="http://beerstrot.it/menu/cibo/diablo.html">Diablo<span class="right">8,8</span></a></h3>    
                                 <p>180 grammi di manzo, salsa piccante, pancetta, cheddar, rucola</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/deciso.html">Deciso<span class="right">8,75</span></a></h3> 
+                                <h3><a href="http://beerstrot.it/menu/cibo/deciso.html">Deciso<span class="right">8,8</span></a></h3> 
                                 <p>180 grammi di manzo, pancetta, gorgonzola, pomodorini confit</p>
                             </li>
-                            <!-- <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/estivo.html">Estivo<span class="right">8</span></a></h3> 
-                                <p>180 grammi di manzo, melanzane, pomodori, formaggio di capra, rucola</p>
-                            </li> -->
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/lamb.html">Lamb<span class="right">8,75</span></a></h3>    
-                                <p>180 grammi di agnello, fondo scuro, germogli di spinaci, salsa allo yogurt</p>
+                                <h3><a href="http://beerstrot.it/menu/cibo/estivo.html">Estivo<span class="right">8,8</span></a></h3> 
+                                <p>180 grammi di manzo, melanzane, formaggio di capra, rucola</p>
+                            </li>
+                            <li>
+                                <h3><a href="http://beerstrot.it/menu/cibo/lamb.html">Lamb<span class="right">8,8</span></a></h3>    
+                                <p>180 grammi di agnello, germogli di spinaci, salsa allo yogurt</p>
                             </li>
                             <!-- <li>
                                 <h3><a href="http://beerstrot.it/menu/cibo/nordico.html">Nordico<span class="right">11,5</span></a></h3>    
                                 <p>180 grammi di salmone, doppia panna, aneto, limone, rucola</p>
                             </li> -->
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/cecilia.html">Cecilia<span class="right">7,5</span></a></h3>    
+                                <h3><a href="http://beerstrot.it/menu/cibo/cecilia.html">Cecilia<span class="right">8</span></a></h3>    
                                 <p>180 grammi di ceci, avocado, composta leggermente piccante di verdure e menta, rucola</p>
                             </li>
                         </ul>                      
                     </div>   
                 </div>
             </div>
-            <div class="panel-menu-n">
+            <div class="panel-menu-2n">
                 <div class="row">
                     <div class="large-12 medium-12 small-12 columns">
                         <h2 class="subheader">Carni <br></h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/costine-in-salsa-bbq.html">Costine in Salsa BBQ<span class="right">9</span></a></h3>    
-                                <p>Costine di maiale al forno in salsa barbeque</p>
+                                <h3><a href="http://beerstrot.it/menu/cibo/costine-in-salsa-bbq.html">Costine in Salsa BBQ<span class="right">11,5</span></a></h3>    
+                                <p>Costine di maiale al forno in salsa barbeque servito con patate fritte</p>
                             </li>
                             <li>
                                 <h3><a href="http://beerstrot.it/menu/cibo/buffalo-chicken-wing.html">Buffalo Chicken Wings<span class="right">7,5</span></a></h3>    
-                                <p>Alette di pollo in salsa buffalo servite con crema di gorgonzola</p>
+                                <p>Alette di pollo in salsa buffalo servite con crema di gorgonzola e verdure</p>
                             </li>
                         </ul>                      
-                    </div>
-                </div>
-            </div>
-            <div class="panel-menu-2n">
-                <div class="row">
-                    <div class="large-12 medium-12 small-12 columns">
-                        <h2 class="subheader">Contorni</h2>
-                        <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
-                            <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/patatine.html">Patate fritte<span class="right">3,5</span></a></h3>    
-                                <p>Patate fritte con la buccia tagliate a mano</p>
-                            </li>
-                            <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/patate-al-forno.html">Patate arrosto<span class="right">3,5</span></a></h3>    
-                                <p>Patate al forno con la buccia, aglio, rosmarino e tagliate a mano</p>
-                            </li>
-                            <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/fagiolini-al-rosmarino.html">Fagioli cannellini<span class="right">2,5</span></a></h3>    
-                                <p>Fagioli cannellini saltati al rosmarino</p>
-                            </li>
-                            <!-- <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/verdure-grigliate.html">Verdure grigliate<span class="right">3,5</span></a></h3>    
-                                <p>Verdure grigliate di stagione</p>
-                            </li> -->
-                            <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/verdure-fresche.html">Verdure fresche<span class="right">3</span></a></h3>    
-                                <p>Verdure fresche di stagione</p>
-                            </li>
-                        </ul>
                     </div>
                 </div>
             </div>
@@ -336,8 +319,8 @@
                                 <p>Fatta in Italia da Birrificio Emiliano. Kolsh che reinterpreta la tradizione tedesca. Fresca termina con un ottimo amaro. Gradi ABV: 10,5%</p>
                             </li>
                             <li>
-                                <h3>Serie di birre Buxton cl33<span class="right">da 5 a 9</span></h3>
-                                <p>Fatta in Inghilterra da Buxton Brewery. Birre strepitose. Gradi ABV: da 6,2% a 13%</p>
+                                <h3>Tante altre<span class="right">da 5 a 20</span></h3>
+                                <p>Ogni mese introduciamo nuove birre in bottiglia. Chiedi al barista</p>
                             </li>
                         </ul>
                     </div>
