--- a/menu/index.html
+++ b/menu/index.html
@@ -115,40 +115,6 @@
                     </div>
                 </div>
             </div>
-            <!-- <div class="panel-menu-2n">
-                <div class="row">
-                    <div class="large-12 medium-12 small-12 columns">
-                        <h2 class="subheader">Pasta <br><small>Pasta fresca fatta in casa</small></h2>
-                        <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
-                            <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/tortelloni.html">Gigli con fave e pancetta<span class="right">7,5</span></a></h3>    
-                                <p>Fave, pancetta croccante, pomodorini pachino e finocchietto selvatico</p>
-                            </li>
-                            <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/linguine-al-limone.html">Pasta del giorno<span class="right">7</span></a></h3>    
-                                <p>Dipende dagli ingredienti e verdure fresche che troviamo</p>
-                            </li>
-                        </ul>                      
-                    </div>
-                </div>
-            </div> -->
-            <!-- <div class="panel-menu-n">
-                <div class="row">
-                    <div class="large-12 medium-12 small-12 columns">
-                        <h2 class="subheader">Zuppe</h2>
-                        <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
-                            <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/gazpacho.html">Gazpacho<span class="right">5</span></a></h3>    
-                                <p>Zuppa al pomodoro fredda</p>
-                            </li>
-                            <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/fave-e-scarola.html">Fave e scarola<span class="right">5</span></a></h3>    
-                                <p>Crema di fave con scarola e crostoni</p>
-                            </li>
-                        </ul>  
-                    </div>
-                </div>
-            </div> -->
             <div class="panel-menu-n">
                 <div class="row">
                     <div class="large-12 medium-12 small-12 columns">
@@ -224,6 +190,26 @@
                     </div>
                 </div>
             </div>
+            <div class="panel-menu-2n">
+                <div class="row">
+                    <div class="large-12 medium-12 small-12 columns">
+                        <h2 class="subheader">Menù per bambini</h2>
+                        <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
+                            <li>
+                                <h3><a href="http://beerstrot.it/menu/cibo/lamb.html">Mini Hamburger con patatine<span class="right">6</span></a></h3>    
+                                <p>100 grammi di manzo, cheddar</p>
+                            </li>
+                            <li>
+                                <h3><a href="http://beerstrot.it/menu/cibo/cheescake.html">Pasta<span class="right">5</span></a></h3>
+                                <p>Olio extra vergine d'oliva | burro | pomodoro</p>
+                            </li>
+                            <!-- <li>
+                                <h3><a href="http://beerstrot.it/menu/cibo/verdure-fresche.html">Torta pere e cioccolato<span class="right">4</span></a></h3>
+                                <p>Torta con pere e scaglie di cioccolato fondente</p>
+                            </li> -->
+                        </ul>
+                    </div>
+                </div>
         </section>
 <!-- cibo fine -->
 <!-- birra -->
